# QtCalculator

./: .gitattributes  .gitignore  CMakeLists.txt  Calc.cpp  Calc.h  Calc.ui  Folder.DotSettings  README.md  main.cpp
lib/googletest/: CMakeLists.txt
src/: CMakeLists.txt  Calc.cpp  Calc.h  Calc.ui  Scientific.cpp  Settings.cpp  Settings.h  Settings.ui  basicCalc.cpp  initializeCalc.cpp  main.cpp  scientificCalc.cpp
src/core/: bitwise.cpp  bitwise.h  core.cpp  core.h  data.h  enums.h  systems.cpp  systems.h  utility.cpp  utility.h
src/gui/: Calc.cpp  Calc.h  Calc.ui  Settings.cpp  Settings.h  Settings.ui  initializeCalc.cpp  programmerCalc.cpp  scientificCalc.cpp
src/log/: basicCore.cpp  basicCore.h
tst/: CMakeLists.txt  tests.cpp  tests_systems.cpp
